# featomat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __main__.py
